--- a/style.css
+++ b/style.css
@@ -56,14 +56,14 @@ body {
   font-size: 4rem;
   margin-bottom: 1rem;
   font-weight: 700;
-  color: orangered;
+  color: black;
 }
 
 .header p {
   font-size: 1.1rem;
   opacity: 0.9;
   font-weight: 500;
-  color: orangered;
+  color: black;
 }
 
 .container {
